<resources>
    <string name="app_name">Cross Country Scoring</string>
    <string name="current_race_finisher">Current Finisher: %s</string>
    <string name="time_elapsed">%1$02d:%2$02d</string>
    <string name="team_score">%1$s Score: %2$d\n\n%3$s %4$s %5$s %6$s %7$s | %8$s %9$s</string>
    <string name="finisher_placeholder">_</string>
    <string name="confirm_race_end">
        Are you sure you want to end the race?
    </string>
    <string name="confirm_race_reset">
        Are you sure you want to reset the race? This will clear all timers, scores and finishers.
    </string>
    <string name="confirm_delete_teams">
        Are you sure you want to delete these teams? This will not affect any previous scoring.
    </string>
    <string name="edit_race">Edit Race</string>
    <string name="end_race">End Race</string>
    <string name="invalid_team_name_placeholder">&lt;Error&gt;</string>
    <string name="reset_race">Reset Race</string>
    <string name="start_race">Start Race</string>
    <string name="default_time">00:00</string>
    <string name="delete_teams">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="timer_service_description">
        Keeps track of time elapsed in Cross Country race.
    </string>
    <string name="race_timer_channel_name">Race Timer</string>
...
